서버 소켓 만듦

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
     "java.project.sourcePaths": ["src"],
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
-        "lib/**/*.jar"
+        "lib/**/*.jar",
+        "/Users/jeonga-eun/Desktop/green_workspacce/java_lab/java-green-2022/lib/gson-2.8.5.jar",
+        "/Users/jeonga-eun/Desktop/green_workspacce/java_lab/java-green-2022/lib/javaSDK-2.2.jar",
+        "/Users/jeonga-eun/Desktop/green_workspacce/java_lab/java-green-2022/lib/json-simple-1.1.1.jar",
+        "/Users/jeonga-eun/Desktop/green_workspacce/java_lab/java-green-2022/lib/lombok.jar"
     ]
 }
